--- a/org.jacoco.agent.rt/pom.xml
+++ b/org.jacoco.agent.rt/pom.xml
@@ -39,6 +39,11 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.jacoco.core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.6</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
